fix: Properly aligns collapsed, nested sets of columns
I'll post some screenshots for this, but when I created nested columns for better breakpoints on tablet/mobile, the columns would be misaligned.

This is the arrangement:
```
—————
Columns block (set to collapse on tablet)
—Column 50%
——Columns block (set to collapse on mobile)
———Column 50%
———Column 50%
—Column 50%
——Columns block (set to collapse on mobile)
———Column 50%
———Column 50%
—————
```

I honestly don't know why this had a 32px margin before – I can't see any other impact it has. But... keep an eye out anyway!

--- a/src/css/_03-generic.scss
+++ b/src/css/_03-generic.scss
@@ -320,6 +320,13 @@ blockquote a, blockquote a:hover, blockquote a:active, blockquote a:visited {
 	}
 }
 
+/* Properly aligns collapsed, nested sets of columns */
+/* when using the Multi Breakpoint Columns plugin    */
+@media only screen and (min-width: 768px) {
+	.entry .entry-content .wp-block-columns .wp-block-column:not(:first-child) {
+	  margin-left: 0px;
+	}
+  }
 
 /***************/
 /*** Buttons ***/
